successful post request and CORS config